--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.5",
+    "@types/node": "^17.0.1",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13",
     "moment": "^2.29.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "serve": "^11.3.2",
-    "typescript": "~3.7.2"
+    "nanoid": "^3.1.25",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
+    "serve": "^13.0.2",
+    "typescript": "^3.7.7"
   },
   "scripts": {
     "start": "react-scripts start",
