--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "sass": "^1.49.9",
     "serve": "^13.0.2",
     "typescript": "^3.7.7"
   },
